--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
         #appCanvas {
             display: block;
             margin: 0 auto; 
-            margin-top: 150px; 
-            background-color:#eee;
+            margin-top: 80px; 
+            background: url(assets/floor2.png);
         }
 
         .gameWindow {
@@ -28,6 +28,14 @@
             position:absolute;
             top:10px;
             left:10px;
+        }
+        #countdown {
+            font-family: 'Roboto', sans-serif;
+            font-size:24px;
+            font-weight: 700;
+            position:absolute;
+            top:10px;
+            left:50px;
         }
 
         .gameOverSuccess {
@@ -57,18 +65,22 @@
 </head>
 <body>
     <div class="gameWindow">
+        <img src="assets/spike.png" id="lamp" width="50" height="50" style="display:none">
         <div class="score">0</div>
+        <div id="countdown">100</div>
         <div class="gameOverSuccess">Yummy Mice!</div>
         <!-- The main frame of the game -->
-        <canvas id="appCanvas" width="640" height="480">
+        <canvas id="appCanvas" width="1080" height="600">
             If you see this, Canvas not supported.
         </canvas>   
     </div>
-    <script type="text/javascript" src="js/utils.js"></script>  
+    <script type="text/javascript" src="js/utils.js"></script>
+    <script type="text/javascript" src="js/shape.js"></script>  
     <script type="text/javascript" src="js/sprite.js"></script> 
     <script type="text/javascript" src="js/player.js"></script> 
     <script type="text/javascript" src="js/cat.js"></script>
-    <script type="text/javascript" src="js/mouse.js"></script>  
+    <script type="text/javascript" src="js/mouse.js"></script> 
+
     <script type="text/javascript" src="js/game.js"></script>  
 </body>
 </html>
