--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             display: block;
             margin: 0 auto; 
             margin-top: 80px; 
-            background: url(assets/floor2.png);
+            background: url(assets/floor2.jpg);
         }
 
         .gameWindow {
