umm.. 3.1...  I think.    I turned the music off cuz it was driving me fuckin Bonkers.

--- a/index.html
+++ b/index.html
@@ -2,73 +2,35 @@
 <html>
 <head>
     <link href='http://fonts.googleapis.com/css?family=Roboto:700,400' rel='stylesheet' type='text/css'>
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>    
-    <script type="text/javascript">
-
-    </script>
-    <style>
-        #appCanvas {
-            display: block;
-            margin: 0 auto; 
-            margin-top: 80px; 
-            background: url(assets/floor2.jpg);
-        }
-
-        .gameWindow {
-            /* Wrapping a class that has an absolute position
-               with one that is relative helps control where the
-               absolute position starts */
-            position:relative;
-        }
-
-        .score {
-            font-family: 'Roboto', sans-serif;
-            font-size:24px;
-            font-weight: 700;
-            position:absolute;
-            top:10px;
-            left:10px;
-        }
-        #countdown {
-            font-family: 'Roboto', sans-serif;
-            font-size:24px;
-            font-weight: 700;
-            position:absolute;
-            top:10px;
-            left:50px;
-        }
-
-        .gameOverSuccess {
-            display:block;
-            font-family: 'Roboto', sans-serif;
-            font-size: 72px;
-            font-weight: 700;
-            color: rgba(255, 0, 0, 0);
-            position: absolute;           
-            top: 0px;
-            left: 0px;           
-            /* update these 2 lines to match appCanvas to keep centered */  
-            width: 640px;          
-            line-height: 480px;   
-            
-            text-align: center;         
-            -webkit-transition: all 1s;
-            transition: all 1s;
-        }
-
-        .reveal {
-            color: rgba(255, 0, 0, 1);
-        }
-
-    </style>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="font-awesome-4.2.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/styles.css" type="text/css" charset="utf-8"/>;
+    <script type="text/javascript"></script>
     <title>Week 8 - Cat Game 2</title>
 </head>
 <body>
+    <div id="timerWrapper">
+        <ul id="scoreItems">
+            <li>
+                <img id="meatTypes" src="assets/meats3types.png">
+            </li>
+            <li>
+                 <div class="score">0</div>
+            </li>
+        </ul> 
+        
+        <ul id="timerItems">
+            <li>
+                <span><i class="fa fa-clock-o fa-3x"></i></span>
+            </li>
+            <li>
+                <div id="countdown">100</div>
+            </li>
+        </ul>
+    </div>
     <div class="gameWindow">
         <img src="assets/spike.png" id="lamp" width="50" height="50" style="display:none">
-        <div class="score">0</div>
-        <div id="countdown">100</div>
-        <div class="gameOverSuccess">Yummy Mice!</div>
+        <div class="gameOverSuccess"></div>
         <!-- The main frame of the game -->
         <canvas id="appCanvas" width="1080" height="600">
             If you see this, Canvas not supported.
