--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <li><p>Veggies are for chumps!  Don't get caught touching these things or your fans will never forgive you.  Destroy Destroy! Meat! Meat! MEAT!</p></li>
         </ul>
     </div>
-    <div id="timerWrapper">
+    <div id="timerWrapper" class="clearfix">
         <ul id="scoreItems" class="clearfix">
             <li>
                 <div id="meatTypes"></div>
@@ -40,8 +40,6 @@
         </ul>
 
         <ul class="volume">
-             <li><div id="volUp"></div> </li>
-             <li><div id="volDown"></div></li>
              <li><div id="mute"></div></li>
          </ul> 
         
