--- a/index.html
+++ b/index.html
@@ -29,13 +29,14 @@
             <li><p>Veggies are for chumps!  Don't get caught touching these things or your fans will never forgive you.  Destroy Destroy! Meat! Meat! MEAT!</p></li>
         </ul>
     </div>
-    <div id="timerWrapper" class="clearfix">
+    <div id="timerWrapper" class="clearfix ">
         <ul id="scoreItems" class="clearfix">
             <li>
                 <div id="meatTypes"></div>
             </li>
             <li>
-                 <div class="score">0</div>
+                <h2>Score: </h2>
+                 <div class="score"> 0</div>
             </li>
         </ul>
 
@@ -43,8 +44,8 @@
              <li><div id="mute"></div></li>
          </ul> 
         
-        <ul id="timerItems">
-            <li>
+        <ul id="timerItems" >
+            <li >
                 <i class="fa fa-clock-o fa-3x"></i>
             </li>
             <li>
