--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
 </head>
 <body>
 
-   
+        <div id="pillarleft"><img src="assets/pillarleft.png"></div>
+        <div id="pillarright"><img src="assets/pillarright.png"></div>
         <h1><img src="assets/czeLogo.png"></h1>
 
-    
+
         <section id="gameInfo">
 
             <p id="arrowInstruction">Use the <span class="greekTxt">W</span>, <span class="greekTxt">S</span>, <span class="greekTxt">A</span>,<span class="greekTxt">D</span> keys on your keyboard to move around the map.</p>
@@ -59,16 +60,17 @@
                 <div class="gameWindow">
                     <img src="assets/spike.png" id="lamp" width="50" height="50" style="display:none">
                     <div class="gameOverSuccess"></div>
-                    <!-- The main frame of the game -->
                     <div class="spikesVert">
                         <img id="leftSpikes" src="assets/leftSpikes.png"></div>
                     </div>
+                     <!-- The main frame of the game -->
                     <canvas id="appCanvas" width="1080" height="600">
                         If you see this, Canvas not supported.
                     </canvas> 
                     <div class="spikesVert">
                         <img id="rightSpikes" src="assets/rightSpikes.png"></div>
                     </div>  
+                    
                 </div>
             <div class="spikesHoriz">
                 <img id="botSpikes" src="assets/bottomSpikes.png"></div>
